fix gallery gaps

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -49,7 +49,7 @@
   }
   .big-img {
     min-width: 842px;
-    height: auto;
+    height: 580px;
     width: 100%;
   }
   .gallery-left-list-img {
